[project]
name = "regime-classification"
version = "0.1.0"
description = "Sliced Wasserstein k-means clustering for regime classification (arXiv 2310.01285v2)"
requires-python = ">=3.11"
dependencies = [
    "numpy>=2.0.0",
    "scipy>=1.11.0",
    "matplotlib>=3.8.0",
    "scikit-learn>=1.3.0",
    "yfinance>=0.2.30",
    "nbformat>=5.9.0",
    "hmmlearn>=0.3.3",
    "ipykernel>=7.3.0",
    "nbconvert>=7.17.1",
]
